# rpi-rose-engine

./: README.md  pyproject.toml
rpi_rose_engine/: config.py  gui.py  mock_gpio.py  motor_control.py  svg_parser.py
scripts/: main.py
